fix content gap in threads
Changelog: fixed

--- a/webapp/channels/src/components/new_replies_banner/new_replies_banner.scss
+++ b/webapp/channels/src/components/new_replies_banner/new_replies_banner.scss
@@ -5,7 +5,9 @@
     justify-content: center;
 
     .toast {
-        width: 156px;
+        // Infomaniak diff
+        width: 210px;
+        border-radius: 15px;
 
         .toast__jump ~ span {
             margin-left: 24px;
